syntax = "proto3";
package splitspectre;
service Agent {
    rpc ClassifyU8s (ClassifyU8sRequest) returns (ClassifyU8sResponse) {}
    rpc Chacha20Encrypt (Chacha20EncryptRequest) returns (Chacha20EncryptResponse) {}
}

message SecretId {
    uint64 keyid = 1;
}

message ClassifyU8sRequest {
    bytes arg1 = 1;
}

message ClassifyU8sResponse {
    SecretId result = 1;
}

message Chacha20EncryptRequest {
    SecretId arg1 = 1;
    uint32 arg2 = 2;
    bytes arg3 = 3;
    bytes arg4 = 4;
}

message Chacha20EncryptResponse {
    bytes result = 1;
}

